RESOLVED FIXED142331
[cmake] Fix the web replay build
https://bugs.webkit.org/show_bug.cgi?id=142331
Summary [cmake] Fix the web replay build
Csaba Osztrogonác
Reported 2015-03-05 02:11:32 PST
issue 1: --------- /usr/bin/python2.7 /home/webkit/WebKit/Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py --outputDir /home/webkit/WebKit/WebKitBuild/Release/DerivedSources/WebCore/ --framework WebCore /home/webkit/WebKit/Source/WebCore/replay/WebInputs.json Traceback (most recent call last): File "/home/webkit/WebKit/Source/JavaScriptCore/replay/scripts/CodeGeneratorReplayInputs.py", line 1048, in <module> raise e # Force the build to fail. __main__.TypecheckException: Unknown type 'double' referenced by member 'fallbackValue' of input 'DocumentLastModifiedDate' After http://trac.webkit.org/changeset/178714 jsc/replay/JSInputs.json is needed in WebCore too. issue 2: --------- ../../Source/WebCore/inspector/InspectorReplayAgent.cpp: In function 'Inspector::Protocol::Replay::SessionState WebCore::buildInspectorObjectForSessionState(WebCore::SessionState)': ../../Source/WebCore/inspector/InspectorReplayAgent.cpp:96:1: error: control reaches end of non-void function [-Werror=return-type] ../../Source/WebCore/inspector/InspectorReplayAgent.cpp: In function 'Inspector::Protocol::Replay::SegmentState WebCore::buildInspectorObjectForSegmentState(WebCore::SegmentState)': ../../Source/WebCore/inspector/InspectorReplayAgent.cpp:106:1: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors Unfortunately GCC can't handle properly if there is return in all cases of an enum class. We should add unreachable returns as workaround to silence this GCC warning.
Attachments
Patch (2.85 KB, patch)
2015-03-05 02:13 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-03-05 02:13:45 PST
Gyuyoung Kim
Comment 2 2015-03-05 02:23:52 PST
Comment on attachment 247939 [details] Patch I'm not a reviewer for inspector reviewer though, this change seems reasonable. r=me.
Gyuyoung Kim
Comment 3 2015-03-05 02:27:12 PST
(In reply to comment #2) > Comment on attachment 247939 [details] > Patch > > I'm not a reviewer for inspector reviewer though, this change seems > reasonable. r=me. s/inspector reviewer/inspector/g It would be nicer to land this change after passing all ews.
Csaba Osztrogonác
Comment 4 2015-03-05 02:29:07 PST
(In reply to comment #3) > It would be nicer to land this change after passing all ews. Sure, I'll wait for EWS and let Brian to comment it.
Brian Burg
Comment 5 2015-03-05 08:59:04 PST
Comment on attachment 247939 [details] Patch Looks good to me. Thanks ossy!
WebKit Commit Bot
Comment 6 2015-03-05 09:09:57 PST
Comment on attachment 247939 [details] Patch Clearing flags on attachment: 247939 Committed r181081: <http://trac.webkit.org/changeset/181081>
WebKit Commit Bot
Comment 7 2015-03-05 09:10:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.