[cmake] Fix the web replay build https://bugs.webkit.org/show_bug.cgi?id=142331

Reviewed by Gyuyoung Kim.

* CMakeLists.txt:
* inspector/InspectorReplayAgent.cpp:
(WebCore::buildInspectorObjectForSessionState):
(WebCore::buildInspectorObjectForSegmentState):


Canonical link: https://commits.webkit.org/160376@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181081 268f45cc-cd09-0410-ab3c-d52691b4dbfc